// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with teacher instructions, prompt and rationale even if not set 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={false}
  settings={
    <Panel
      configuration={
        Object {
          "addChoice": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": true,
              },
            },
          },
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "blockquote": Object {
              "disabled": true,
            },
            "h3": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "choicesPosition": Object {
            "label": "Choices Position",
            "settings": true,
          },
          "duplicates": Object {
            "label": "Duplicates",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "lockChoiceOrder": Object {
            "label": "Lock Choice Order",
            "settings": true,
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "choice": 300,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "choice": 300,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxLength": 200,
          "maxResponseAreas": 10,
          "minChoices": 2,
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "settingsPanelDisabled": false,
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "spellCheckEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "choicesPosition": undefined,
            "duplicates": undefined,
            "language": false,
            "language.enabled": false,
            "lockChoiceOrder": undefined,
            "partialScoring": false,
          },
        }
      }
      model={
        Object {
          "alternateResponses": Array [
            Array [
              "1",
            ],
            Array [
              "0",
            ],
          ],
          "choices": Array [
            Object {
              "id": "0",
              "value": "<div>6</div>",
            },
            Object {
              "id": "1",
              "value": "<div>9</div>",
            },
          ],
          "choicesPosition": "below",
          "correctResponse": Object {
            "0": "0",
            "1": "1",
          },
          "disabled": false,
          "duplicates": true,
          "markup": "{{0}} + {{1}} = 15",
          "mode": "gather",
          "prompt": "<p>Solve the equation below.</p>",
          "promptEnabled": true,
          "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
          "rationaleEnabled": true,
          "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
          "studentInstructionsEnabled": true,
          "teacherInstructions": "",
          "teacherInstructionsEnabled": true,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <InputContainer
    label="Teacher Instructions"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "blockquote": Object {
            "disabled": true,
          },
          "h3": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <InputContainer
    label="Prompt"
  >
    <EditableHtml
      allowValidation={false}
      disableUnderline={true}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup="<p>Solve the equation below.</p>"
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "blockquote": Object {
            "disabled": true,
          },
          "h3": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <div>
    <WithStyles(Typography)
      component="div"
    >
      Define Template, Choices, and Correct Responses
    </WithStyles(Typography)>
    <WithStyles(Tooltip)
      classes={
        Object {
          "tooltip": undefined,
        }
      }
      disableFocusListener={true}
      disableTouchListener={true}
      placement="right"
      title="Validation requirements:
The tokens should not be empty and should be unique.
There should be at least 1 and at most 10 response areas defined.
There should be at least 2 tokens defined."
    >
      <pure(InfoIcon)
        color="primary"
        fontSize="small"
        style={
          Object {
            "marginLeft": "5px",
          }
        }
      />
    </WithStyles(Tooltip)>
  </div>
  <EditableHtml
    activePlugins={
      Array [
        "bold",
        "html",
        "extraCSSRules",
        "italic",
        "underline",
        "strikethrough",
        "bulleted-list",
        "numbered-list",
        "image",
        "math",
        "languageCharacters",
        "blockquote",
        "h3",
        "table",
        "video",
        "audio",
        "responseArea",
        "redo",
        "undo",
        "superscript",
        "subscript",
      ]
    }
    allowValidation={false}
    disableImageAlignmentButtons={true}
    disableUnderline={true}
    languageCharactersProps={
      Array [
        Object {
          "language": "spanish",
        },
        Object {
          "language": "special",
        },
      ]
    }
    markup="<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15"
    mathMlOptions={
      Object {
        "mmlEditing": false,
        "mmlOutput": false,
      }
    }
    nonEmpty={false}
    onChange={[Function]}
    onDone={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": false,
        },
        "blockquote": Object {
          "disabled": true,
        },
        "h3": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "textAlign": Object {
          "disabled": true,
        },
        "video": Object {
          "disabled": false,
        },
      }
    }
    responseAreaProps={
      Object {
        "maxResponseAreas": 10,
        "options": Object {
          "duplicates": true,
        },
        "type": "drag-in-the-blank",
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
  <WithStyles(Choices)
    duplicates={true}
    mathMlOptions={
      Object {
        "mmlEditing": false,
        "mmlOutput": false,
      }
    }
    maxImageHeight={300}
    maxImageWidth={300}
    maxLength={200}
    model={
      Object {
        "alternateResponses": Array [
          Array [
            "1",
          ],
          Array [
            "0",
          ],
        ],
        "choices": Array [
          Object {
            "id": "0",
            "value": "<div>6</div>",
          },
          Object {
            "id": "1",
            "value": "<div>9</div>",
          },
        ],
        "choicesPosition": "below",
        "correctResponse": Object {
          "0": "0",
          "1": "1",
        },
        "disabled": false,
        "duplicates": true,
        "markup": "{{0}} + {{1}} = 15",
        "mode": "gather",
        "prompt": "<p>Solve the equation below.</p>",
        "promptEnabled": true,
        "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
        "rationaleEnabled": true,
        "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
        "studentInstructionsEnabled": true,
        "teacherInstructions": "",
        "teacherInstructionsEnabled": true,
        "toolbarEditorPosition": "bottom",
      }
    }
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "blockquote": Object {
          "disabled": true,
        },
        "h3": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "textAlign": Object {
          "disabled": true,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
  <InputContainer
    label="Rationale"
  >
    <EditableHtml
      allowValidation={false}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup="<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>"
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "blockquote": Object {
            "disabled": true,
          },
          "h3": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": false,
          },
          "textAlign": Object {
            "disabled": true,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
</ConfigLayout>
`;

exports[`Main snapshot renders without teacher instructions, prompt and rationale 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={false}
  settings={
    <Panel
      configuration={
        Object {
          "addChoice": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": true,
              },
            },
          },
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "blockquote": Object {
              "disabled": true,
            },
            "h3": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": false,
            },
            "textAlign": Object {
              "disabled": true,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "choicesPosition": Object {
            "label": "Choices Position",
            "settings": true,
          },
          "duplicates": Object {
            "label": "Duplicates",
            "settings": true,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "lockChoiceOrder": Object {
            "label": "Lock Choice Order",
            "settings": true,
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "choice": 300,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "choice": 300,
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxLength": 200,
          "maxResponseAreas": 10,
          "minChoices": 2,
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "settingsPanelDisabled": false,
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "spellCheckEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "choicesPosition": undefined,
            "duplicates": undefined,
            "language": false,
            "language.enabled": false,
            "lockChoiceOrder": undefined,
            "partialScoring": false,
          },
        }
      }
      model={
        Object {
          "alternateResponses": Array [
            Array [
              "1",
            ],
            Array [
              "0",
            ],
          ],
          "choices": Array [
            Object {
              "id": "0",
              "value": "<div>6</div>",
            },
            Object {
              "id": "1",
              "value": "<div>9</div>",
            },
          ],
          "choicesPosition": "below",
          "correctResponse": Object {
            "0": "0",
            "1": "1",
          },
          "disabled": false,
          "duplicates": true,
          "markup": "{{0}} + {{1}} = 15",
          "mode": "gather",
          "prompt": "<p>Solve the equation below.</p>",
          "promptEnabled": false,
          "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
          "rationaleEnabled": false,
          "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
          "studentInstructionsEnabled": true,
          "teacherInstructions": "",
          "teacherInstructionsEnabled": false,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <div>
    <WithStyles(Typography)
      component="div"
    >
      Define Template, Choices, and Correct Responses
    </WithStyles(Typography)>
    <WithStyles(Tooltip)
      classes={
        Object {
          "tooltip": undefined,
        }
      }
      disableFocusListener={true}
      disableTouchListener={true}
      placement="right"
      title="Validation requirements:
The tokens should not be empty and should be unique.
There should be at least 1 and at most 10 response areas defined.
There should be at least 2 tokens defined."
    >
      <pure(InfoIcon)
        color="primary"
        fontSize="small"
        style={
          Object {
            "marginLeft": "5px",
          }
        }
      />
    </WithStyles(Tooltip)>
  </div>
  <EditableHtml
    activePlugins={
      Array [
        "bold",
        "html",
        "extraCSSRules",
        "italic",
        "underline",
        "strikethrough",
        "bulleted-list",
        "numbered-list",
        "image",
        "math",
        "languageCharacters",
        "blockquote",
        "h3",
        "table",
        "video",
        "audio",
        "responseArea",
        "redo",
        "undo",
        "superscript",
        "subscript",
      ]
    }
    allowValidation={false}
    disableImageAlignmentButtons={true}
    disableUnderline={true}
    languageCharactersProps={
      Array [
        Object {
          "language": "spanish",
        },
        Object {
          "language": "special",
        },
      ]
    }
    markup="<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15"
    mathMlOptions={
      Object {
        "mmlEditing": false,
        "mmlOutput": false,
      }
    }
    nonEmpty={false}
    onChange={[Function]}
    onDone={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": false,
        },
        "blockquote": Object {
          "disabled": true,
        },
        "h3": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "textAlign": Object {
          "disabled": true,
        },
        "video": Object {
          "disabled": false,
        },
      }
    }
    responseAreaProps={
      Object {
        "maxResponseAreas": 10,
        "options": Object {
          "duplicates": true,
        },
        "type": "drag-in-the-blank",
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
  <WithStyles(Choices)
    duplicates={true}
    mathMlOptions={
      Object {
        "mmlEditing": false,
        "mmlOutput": false,
      }
    }
    maxImageHeight={300}
    maxImageWidth={300}
    maxLength={200}
    model={
      Object {
        "alternateResponses": Array [
          Array [
            "1",
          ],
          Array [
            "0",
          ],
        ],
        "choices": Array [
          Object {
            "id": "0",
            "value": "<div>6</div>",
          },
          Object {
            "id": "1",
            "value": "<div>9</div>",
          },
        ],
        "choicesPosition": "below",
        "correctResponse": Object {
          "0": "0",
          "1": "1",
        },
        "disabled": false,
        "duplicates": true,
        "markup": "{{0}} + {{1}} = 15",
        "mode": "gather",
        "prompt": "<p>Solve the equation below.</p>",
        "promptEnabled": false,
        "rationale": "<p>A correct response is shown below:</p><ul><li>2/6 = 1/3</li><li>4/8 = 1/2</li><li>6/10 = 3/5</li><li>9/12 = 3/4</li></ul>",
        "rationaleEnabled": false,
        "slateMarkup": "<span data-type=\\"drag_in_the_blank\\" data-index=\\"0\\" data-id=\\"0\\" data-value=\\"&lt;div&gt;6&lt;/div&gt;\\"></span> + <span data-type=\\"drag_in_the_blank\\" data-index=\\"1\\" data-id=\\"1\\" data-value=\\"&lt;div&gt;9&lt;/div&gt;\\"></span> = 15",
        "studentInstructionsEnabled": true,
        "teacherInstructions": "",
        "teacherInstructionsEnabled": false,
        "toolbarEditorPosition": "bottom",
      }
    }
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "blockquote": Object {
          "disabled": true,
        },
        "h3": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "textAlign": Object {
          "disabled": true,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
</ConfigLayout>
`;
